fix: fixing spaces, alignment and sizes.

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,4 +1,75 @@
-.v-sidebar-menu {
+
+
+.vsm-sidebar-menu {
+  position: relative;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  z-index: 999;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100vh;
+  text-align: left;
+  transition: 0.3s all ease;
+
+  background-color: $vsm--background-color;
+  border-right: 1px solid $vsm--line-color;
+
+  @media (max-width: 992px) {
+    position: fixed;
+  }
+
+  &:not(.vsm_expanded, .vsm_collapsed) {
+    padding: $vsm--space-md;
+  }
+
+  &.vsm_collapsed {
+    padding-top: $vsm--space-sm;
+
+    .vsm--area {
+      padding: 0 $vsm--space-sm;
+      margin-bottom: $vsm--space-md;
+    }
+    .vsm--area.logo-area {
+      padding: 0 $vsm--space-md;
+      margin-bottom: $vsm--space-md;
+    }
+
+    .vsm--scroll-wrapper {
+      border-bottom-color: transparent;
+    }
+
+    .vsm--item_level-1 {
+      margin-bottom: $vsm--space-md;
+
+      .vsm--icon {
+        min-width: 32px;
+      }
+
+      .vsm--link {
+        padding: 0 $vsm--space-md;
+      }
+    }
+  }
+  &.vsm_expanded {
+    padding-top: $vsm--space-lg;
+
+    .vsm--area {
+      padding: $vsm--space-sm;
+      margin-bottom: $vsm--space-lg;
+    }
+    .vsm--area.logo-area {
+      padding: 0 $vsm--space-lg;
+      margin-bottom: $vsm--space-lg;
+    }
+
+    .vsm--item_level-1, .vsm--header {
+      padding: 0 $vsm--space-lg;
+    }
+  }
+
   * {
     box-sizing: border-box;
 
@@ -18,33 +89,11 @@
     }
   }
 
-  position: relative;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  display: flex;
-  flex-direction: column;
-  z-index: 999;
-  box-sizing: border-box;
-  width: 100%;
-  height: 100vh;
-  text-align: left;
-  transition: 0.3s all ease;
-
-  background-color: $vsm--background-color;
-  border-right: 1px solid $vsm--line-color;
-  padding: $vsm--sidebar-padding;
-
-  @media (max-width: 992px) {
-    position: fixed;
-  }
-
   .vsm--scroll-wrapper {
     height: 100%;
     overflow-y: auto;
     overflow-x: hidden;
     overscroll-behavior-y: contain;
-    padding: 0 3px;
     border: 1px solid transparent;
     transition: border-color .3s ease;
 
@@ -140,32 +189,40 @@
     width: 100%;
     margin: $vsm--area-margin;
 
-    &.slot--mask {
-      min-height: $vsm--item-height;
-      border: 1px dashed transparent;
-      transition: border .4s ease;
-      padding: $vsm--item-padding;
+    &.area--hidden {
+      display: none;
+    }
 
-      &:hover {
-        cursor: pointer;
-        border-color: $vsm--line-color;
-      }
+    &.logo-area {
+      //min-height: $vsm--item-height;
     }
    }
 
   .vsm--header {
-    padding: .5rem 1rem;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-between;
+    gap: $vsm--item-gap;
     margin: 1.5rem 0 .5rem 0;
-    min-height: $vsm--item-line-height;
-    //border-top: 1px solid $vsm--line-color;
 
-    color: $vsm--line-color;
+    &_inner {
+      min-height: 16px;
+      flex: 1;
+      padding: 0 $vsm--space-xxs;
+      color: $vsm--line-color;
+      font-family: "Nunito", "Helvetica", sans-serif;
+      font-size: $vsm--item-header-font-size;
+      font-weight: bold;
+      letter-spacing: .4px;
+      white-space: nowrap;
+      text-transform: uppercase;
+    }
 
-    font-family: "Nunito", "Helvetica", sans-serif;
-    font-size: .75rem;
-    font-weight: 600;
-    white-space: nowrap;
-    text-transform: uppercase;
+    :is(svg, i) {
+      height: 20px !important;
+      width: 20px !important;
+    }
   }
 
   .vsm--item {
@@ -173,7 +230,16 @@
     display: block;
     width: 100%;
     white-space: nowrap;
-    margin: 0 0 4px 0;
+    min-height: $vsm--space-xxl;
+    min-width: $vsm--space-xxl;
+
+    &_level-1 {
+      margin-bottom: $vsm--space-xxs;
+    }
+
+    &__level-2, &__level-3 {
+      margin-bottom: $vsm--space-xxs;
+    }
 
     &:last-child {
       margin: 0;
@@ -185,12 +251,12 @@
     align-items: center;
     position: relative;
     min-height: $vsm--item-height;
-    gap: 12px;
+    gap: $vsm--item-gap;
+    padding: 4px;
     z-index: 20;
     cursor: pointer;
     user-select: none;
     transition: 0.3s all ease;
-    padding: $vsm--item-padding;
     border-radius: $vsm--item-radius;
 
     font-size: $vsm--item-font-size;
