--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -10,26 +10,30 @@ $vsm--opacity: .87;
 $vsm--opacity-active: .68;
 $vsm--opacity-disabled: .37;
 
-// @sidebar
-$vsm--sidebar-padding: 16px 0 0 0 !default;
 
-$vsm--area-padding: 8px 0 !default;
-$vsm--area-margin: 0 0 24px 0 !default;
+$vsm--space-xxs:            4px;
+$vsm--space-xs:             8px;
+$vsm--space-sm:             12px;
+$vsm--space-md:             16px;
+$vsm--space-lg:             20px;
+$vsm--space-xl:             24px;
+$vsm--space-xxl:            32px;
 
 $vsm--scrollbar-track-color: #333;
 $vsm--scrollbar-thumb-color: #999;
 
-// @dropdown
-$dropdown-color: null !default;
-$dropdown-bg: lighten( $vsm--background-color, 5% ) !default;
+// @sidebar
+$vsm--area-padding: 0 $vsm--space-lg !default;
+$vsm--area-margin: 0 0 $vsm--space-lg 0 !default;
 
 // @item
-$vsm--item-height: 45px !default;
-$vsm--item-padding: 6px 10px !default;
-$vsm--item-font-size: 16px !default;
-$vsm--item-line-height: 18px !default;
-$vsm--item-radius: 8px;
-
+$vsm--item-height:              32px !default;
+$vsm--item-padding:             6px 12px !default;
+$vsm--item-gap:                 16px !default;
+$vsm--item-radius:              8px;
+$vsm--item-font-size:           16px !default;
+$vsm--item-line-height:         18px !default;
+$vsm--item-header-font-size:    10px !default;
 
 $vsm--item-color: #ffffff !default;
 $vsm--item-color-hover: null !default;
@@ -41,13 +45,17 @@ $vsm--item-bg-open: $vsm--background-color !default;
 $vsm--item-bg-active: null !default;
 
 
+// @dropdown
+$dropdown-color: null !default;
+$dropdown-bg: lighten( $vsm--background-color, 5% ) !default;
+
 // @icon
 $vsm--icon-color: #FFF !default;
 $vsm--icon-color-open: null !default;
 $vsm--icon-color-active: null !default;
 $vsm--icon-bg: darken( $vsm--background-color, 5% ) !default;
 $vsm--icon-bg-open: $vsm--item-bg-open !default;
-$vsm--icon-bg-active: null !default;
+$vsm--icon-bg-active: $vsm--primary-color !default;
 
 $vsm--icon-size-lg: 40px !default;
 $vsm--icon-size-md: 32px !default;
