--- a/src/scss/themes/white-theme.scss
+++ b/src/scss/themes/white-theme.scss
@@ -12,7 +12,7 @@ $vsm--line-color: rgb(231, 231, 233);
 $vsm--scrollbar-bg-color: #333;
 $vsm--scrollbar-track-color: #999;
 
-.v-sidebar-menu.vsm_white-theme {
+.vsm-sidebar-menu.vsm_white-theme {
   &.vsm--background {
     background-color: $vsm--background-color;
   }
